# hjarne-backend

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  render.yaml  render.yml
.sqlx/: query-0004b002e339250233f45c8f1687fc63bce883d5aad6c3f9bc29e143733917ba.json  query-0243672d971703a7e528ecda3fc16002108d6e8f673605b2c676ad95ebfba215.json  query-047ae6acd4db26faedb461fb219edf7254c81d5c19019b3637ce88153fc74e37.json  query-05c4159ef1f6d243ffbc3e3738b86530587bee27d63a9842c1181f08aaa5a3bc.json  query-072e61bd62edb920fc218995861c6473f952ab093c418ad3bd4ac88f38d617b7.json  query-0a39d5bcc4cd7e892cb8d421a8de3d07df9152c5cfee2e7e718db6fd702b20ab.json  query-0b3dd99fadbbc647f46582e86cf0aef160a45fa2591920e0182bf6e2f3bab554.json  query-0bbc4b4ee6c299874eb10396c91984a2489707d2be4f77075e7498d0411f0179.json  query-0d9ebbb64800707b5a855b5f04f8da8f32f0a06f43e57e719ac08af8ffdf346d.json  query-0ecb8d52ac7af3328593963e9904b31c36c3874600fc47479c8f032c6849f15a.json  query-127ff2c6aef6eed68c42483e94cde2a7eae66771b725990387d53f256741b747.json  query-1374d4b8d1b33a491fdc41835bdc95030e2e16b5ba40806b98e28c8eeef5e254.json  query-169bb2df15013ffeaac79e8e686d2403ade713bdfef4d2111fd736a5a0e264da.json  query-175aff9859af812a3802857cb6446fe4daa52034800c5839054405eae5dfede1.json  query-17786eb58aaeb443ed69df31b485d271c143326c4e5e5b02c2be415108a26b09.json  query-1f81b57e505f679850a7afca903e2156ff48888e5247f4d00e24a47c916a556b.json  query-20e4af9bc37bd020f2ddd72d3929c46621e2814d334063e9fa788e0e8166b982.json  query-251fac7170a0e4c21a31a97cef46a6a8e12789ef694a0f8985e8881e6f5e7ed3.json  query-2e98b69227b08e8d0d0ed533ffa06d8a86dac9617fd3c553f12dd880158caf2a.json  query-3793f97b0eaf85e1f9b625ac467db9bc765ef5b66725444b422582aa7a026ca4.json  query-38fa02bc8756137ac0aa50ae20ee20424aaf54a690bb3ce0a4c97349fb6aec25.json  query-3edb71a49dfa9de8344cddeca3afa63c2275013e318e34c14f6e80c9bf94129e.json  query-41c6bcc0f444216de7735dd978717d1cb30758eb53ea6f5f2885845be2e36a74.json  query-457f1f2b55ea56dc388145c2c2d79ada5b5cd51a96df45ab8d7137dcc85fb856.json  query-46371137df66c9b1fe3180782058def408338216be43ab5ae687bde98f07ede3.json  query-4c4a9298a8b126a9a91eb047b4cab37933606e419185d3993b09c98c09f65455.json  query-4e3f6ed35bfe19ea6af93b92a36aa142a41ab3ddd14bbf8b17dab76276f29e48.json  query-4f0b7ef7eabf8cbf0ebea3607ffc395d4c3ff66e1e50c2cd74c1344bf8fd6821.json  query-4fd7fb7e0da6de21c6e3cc5c9885de4cdfe73a0d8983517c53b04621190e2113.json  query-5013fb5f452ecd26701b89903b49a993a08478bebea29051c3d6eac31ca39f57.json  query-50bedd52dd53109288993a367a4b964d5c4bf1a247f41a21a009b715e963e9b2.json  query-572ebe0459a189dd7b3f7f7e9114603aaa67cb6d40f92967518037693f1e9222.json  query-57a12ae77fe0549be1cd0df59ddc4593fd7f0f5112e4b3c588cf89e688a64ca2.json  query-5af978c50c829b561837a13c3a6506b087d39f77b8f12a9c10e42c57941c3660.json  query-5d432b4af222304410cadd063c807b29729135d5363d1eedf0ee10a0c9e9cc54.json  query-603515a6bda404b75dc03b5402966fa5378bdf189a66602605c60be4c659fb49.json  query-61548f9935a442fcf16c566cca0ae79008ab07528611a993cbe0327a12d80cc7.json  (+59 more)
crates/api/: Cargo.toml
crates/api/src/: config.rs  main.rs  middleware.rs  notifications.rs  state.rs
crates/api/src/routes/: appointments.rs  auth.rs  cases.rs  clinical_comms.rs  health.rs  mod.rs  notifications.rs  patients.rs  portal.rs  prescriptions.rs  staff.rs  ws.rs
crates/auth/: Cargo.toml
crates/auth/examples/: hash_password.rs
crates/auth/src/: claims.rs  jwt.rs  lib.rs  password.rs
crates/cache/: Cargo.toml
crates/cache/src/: client.rs  keys.rs  lib.rs  ops.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  models.rs  pool.rs
crates/shared/: Cargo.toml
crates/shared/src/: errors.rs  lib.rs  response.rs  types.rs
(+11 files in other folders)
