[workspace]
members = [
    "crates/shared",
    "crates/db",
    "crates/auth",
    "crates/cache",
    "crates/api",
]
resolver = "2"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
bigdecimal = { version = "0.4", features = ["serde"] }
dashmap = "6"
sha2 = "0.10"

# web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# redis
redis = { version = "0.25", features = ["tokio-native-tls-comp", "connection-manager"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# auth
jsonwebtoken = "9"
bcrypt = "0.15"

# ids
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# time
chrono = { version = "0.4", features = ["serde"] }

# error handling
thiserror = "1"
anyhow = "1"

# env + config
dotenvy = "0.15"
config = "0.14"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# validation
validator = { version = "0.18", features = ["derive"] }