[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hjarne-api"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
db = { path = "../db" }
auth = { path = "../auth" }
cache = { path = "../cache" }
bigdecimal = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
validator = { workspace = true }
jsonwebtoken = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
reqwest = { version = "0.13.2", features = ["json", "native-tls"], default-features = false }
