[package]
name = "cache"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }