[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }