[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
sqlx = { workspace = true }
